src-tauri/abilities-runtime/tests/trybuild/boundary/absolute_std_fs_write_in_ability_fails.stderr
error: ability bodies cannot bypass the ServiceContext boundary; detected: std::fs::write
  --> tests/trybuild/boundary/absolute_std_fs_write_in_ability_fails.rs:40:10
   |
40 | async fn absolute_std_fs_write_boundary(
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
